# oci-kafka-mcp-server

./: .env.oci.example  .gitignore  CLAUDE.md  PROJECT_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yaml  kraft-server.properties
docs/: ARCHITECTURE.md  DEMO_RUNBOOK.md  DEMO_SETUP_GUIDE.md
src/oci_kafka_mcp/: config.py  server.py
src/oci_kafka_mcp/audit/: logger.py
src/oci_kafka_mcp/kafka/: admin_client.py  connection.py  consumer_client.py
src/oci_kafka_mcp/oci/: kafka_client.py  streaming_client.py
src/oci_kafka_mcp/security/: auth.py  policy_guard.py
src/oci_kafka_mcp/tools/: cluster.py  cluster_config.py  cluster_management.py  connection.py  consumers.py  diagnostics.py  observability.py  oci_metadata.py  topics.py  work_requests.py
tests/: conftest.py
tests/unit/: test_audit_logger.py  test_circuit_breaker.py  test_cluster_config_tools.py  test_cluster_management_tools.py  test_cluster_tools.py  test_config.py  test_connection_tools.py  test_consumer_tools.py  test_consumer_write_tools.py  test_diagnostics.py  test_observability_tools.py  test_oci_metadata_tools.py  test_policy_guard.py  test_topic_tools.py  test_work_request_tools.py
